Latest Changes:
===============
- fix: potential stack corruption in JSON bytes output
- fix: remove superfluous check (ud.vi < 0)

Release R2005:
==============
- enhancement: added option to en-/disable use of ID 0
- enhancement: WFC should exit with EXIT_FAILURE on all errors
- enhancement: JSON and ASCII of unkown enums as decimal integer
- enhancement: parsing of enum values in setByValue
- enhancement: reduced JSON code size
- enhancement: updated early decoding and moved from beta to stable
- fix: several fixes related to JSON output generation
- fix: added missing boundary check for string assignment
- enhancement: JSON validation integrated in test-suite
- buildenv: updated autoconf scripts, check that xxd is available
- porting: update for Cygwin

Release R2003:
==============
- enhancement: added option to set field ascii parsing function
- enhancement: ascii output should include unset fields
- enhancement: clear() should reset the member to the default value
- enhancement: support to clear field with setByName(value = 0)
- enhancement: support to add element with setByName("element[+]",...)
- fix: assertion failure with multiple field options
- fix: field options clear and unset must play together
- fix: static storage initialization broken

Release R2002:
==============
- enhancement: getMaxSize returns SIZE_MAX if size is unlimited
- enhancement: output custom declarations to .cpp
- enhancement: support for custom JSON value generation
- enhancement: storage type specification
- enhancement: repeated types should have a const& get
- enhancement: added concept for reserving ids
- enhancement: set value by name from ASCII (restrictions see man page)
- enhancement: removed dependency to wfc_support.* for ASCII output
- enhancement: added support for custom template functions
- documentation updates (ongoing)
- fix: unset value should be used as default, if default is not set
- fix JSON output for 8 bit integers
- fix related to subclass naming